--- a/anna-1.ini
+++ b/anna-1.ini
@@ -40,7 +40,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义01
 custom_proxy_group=🚀 节点选择`select`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 负载均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
@@ -54,12 +54,12 @@ custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🎥 奈飞节点`[
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 负载均衡`[]♻️ 自动选择`[]🐸 手动切换
 custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 负载均衡`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 自动选择`[]🐸 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]🍃 负载均衡`[]♻️ 自动选择`[]🐸 手动切换
 ;策略组定义02
 custom_proxy_group=🐸 手动切换`select`(vip1|vip2)
 custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|JP))^((?!(vip1|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
