--- a/anna.ini
+++ b/anna.ini
@@ -63,7 +63,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 ;策略组定义02
-custom_proxy_group=🐸 手动切换`select`(vip1|vip2)
+custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|JP))^((?!(官方|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 加坡节点`url-test`(?=.*(新加坡|坡|狮城|SG))^((?!(官方|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美国|UM))^((?!(官方|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
@@ -78,7 +78,7 @@ custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美|US|(?i)States|Americ
 custom_proxy_group=♻️ 日本自动`url-test`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 美国自动`url-test`(?=.*(美|US|(?i)States|America))^((?!(港|台|日|韩|新|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 加坡自动`url-test`(?=.*(新|SG|(?i)Singapore))^((?!(港|台|日|韩|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 自动选择`url-test`(?=.*(vip2))^((?!(游戏|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(游戏|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|vip2)
 ;启用自定义规则集
 enable_rule_generator=true
