--- a/anna.ini
+++ b/anna.ini
@@ -69,6 +69,8 @@ custom_proxy_group=🇸🇬 加坡节点`url-test`(?=.*(新加坡|坡|狮城|SG)
 custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美国|UM))^((?!(官方|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇻🇳 越南节点`select`(?=.*(越南|VN))^((?!(官方|游戏)).)*$
 custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK))^((?!(官方|游戏)).)*$
+custom_proxy_group=🇨🇳 台湾节点`select`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(官方|游戏)).)*$
+custom_proxy_group=🇰🇷 韩国节点`select`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(官方|游戏)).)*$
 custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|JP))^((?!(官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG))^((?!(官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 美国故转`fallback`(?=.*(美国|UM))^((?!(官方)).)*$`http://www.gstatic.com/generate_204`300,,50
@@ -78,6 +80,8 @@ custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美|US|(?i)States|Americ
 custom_proxy_group=♻️ 日本自动`url-test`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 美国自动`url-test`(?=.*(美|US|(?i)States|America))^((?!(港|台|日|韩|新|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 加坡自动`url-test`(?=.*(新|SG|(?i)Singapore))^((?!(港|台|日|韩|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 台湾自动`url-test`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(港|日|韩|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 韩国自动`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(港|台|日|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(游戏|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|vip2)
 ;启用自定义规则集
