--- a/anna.ini
+++ b/anna.ini
@@ -40,28 +40,28 @@ ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义01
-custom_proxy_group=🚀 节点选择`select`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🐬 OneDrive`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换
-custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]🐸 手动切换
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🎥 奈飞节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换
+custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`[]🐸 手动切换
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🎥 奈飞节点`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 美国故转`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🇻🇳 越南节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🍃 日本均衡`[]🍃 加坡均衡`[]🍃 美国均衡`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 ;策略组定义02
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|JP))^((?!(官方|游戏)).)*$`http://www.gstatic.com/generate_204`300,,50
