--- a/gongyong.ini
+++ b/gongyong.ini
@@ -54,20 +54,18 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 英国自动`[]♻️ 法国自动`[]♻️ 德国自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 ;策略组定义02
 custom_proxy_group=🐸 手动切换`select`.*
-custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍃 加坡均衡`load-balance`(?=.*(新|SG|(?i)Singapore))^((?!(港|台|日|韩|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美|US|(?i)States|America))^((?!(港|台|日|韩|新|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 日本自动`url-test`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 美国自动`url-test`(?=.*(美|US|(?i)States|America))^((?!(港|台|日|韩|新|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 加坡自动`url-test`(?=.*(新|SG|(?i)Singapore))^((?!(港|台|日|韩|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 台湾自动`url-test`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(港|日|韩|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 韩国自动`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(港|台|日|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 香港自动`url-test`(?=.*(港|HK|Hong Kong))^((?!(日|台|韩|新|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50 
-custom_proxy_group=♻️ 英国自动`url-test`(?=.*(英|UK|Britain|Británico))^((?!(港|台|韩|新|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50 
-custom_proxy_group=♻️ 法国自动`url-test`(?=.*(法|FR|France|Français))^((?!(港|台|韩|新|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50 
-custom_proxy_group=♻️ 德国自动`url-test`(?=.*(德|DE|Germany|Deutsch))^((?!(港|台|韩|新|美|官方)).)*$`http://www.gstatic.com/generate_204`300,,50 
-custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(cn|官方|中国)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|vip2)
+custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🍃 加坡均衡`load-balance`(?=.*(新|SG|(?i)Singapore))^((?!(港|台|日|韩|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🍃 美国均衡`load-balance`(?=.*(美|US|(?i)States|America))^((?!(港|台|日|韩|新|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 日本自动`url-test`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 美国自动`url-test`(?=.*(美|US|(?i)States|America))^((?!(港|台|日|韩|新|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 加坡自动`url-test`(?=.*(新|SG|(?i)Singapore))^((?!(港|台|日|韩|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 台湾自动`url-test`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(港|日|韩|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 韩国自动`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(港|台|日|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 香港自动`url-test`(?=.*(港|HK|Hong Kong))^((?!(日|台|韩|新|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50 
+custom_proxy_group=♻️ 英法德自动`url-test`(?=.*(英|UK|Britain|Británico|法|FR|France|Français|德|DE|Germany|Deutsch))^((?!(港|台|韩|新|美|cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50 
+custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(cn|中国|官方)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;启用自定义规则集
 enable_rule_generator=true
 overwrite_original_rules=true
