--- a/gongyong.ini
+++ b/gongyong.ini
@@ -33,25 +33,25 @@ ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义01
-custom_proxy_group=🚀 节点选择`select`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🐬 OneDrive`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🎥 奈飞节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 加坡自动`[]♻️ 台湾自动`[]♻️ 韩国自动`[]♻️ 香港自动`[]♻️ 欧洲自动`[]♻️ 亚洲自动`[]♻️ 自动选择`[]🐸 手动切换`[]DIRECT
 ;策略组定义02
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🍃 日本均衡`load-balance`(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|CN|中国|官方|IPV6|优选|更新)).)*$`http://www.gstatic.com/generate_204`300,,50
@@ -64,6 +64,7 @@ custom_proxy_group=♻️ 台湾自动`url-test`(?=.*(台|新北|彰化|TW|Taiwa
 custom_proxy_group=♻️ 韩国自动`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(港|台|日|美|CN|中国|官方|IPV6|优选|更新)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 香港自动`url-test`(?=.*(港|HK|Hong Kong))^((?!(日|台|韩|新|美|CN|中国|官方|IPV6|优选|更新)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 欧洲自动`url-test`(?=.*(英|UK|法|FR|德|DE|乌|UA|意|IT|西|ES|葡|PT|瑞|SE|荷|NL|芬|FI|挪|NO|丹|DK|希|GR|捷|CZ|匈|HU|波|PL|罗|RO|斯|SK|斯洛|SI|爱|IE|巴|BG|克|HR|塞|RS|拉|LV|立|LT|爱|EE))^((?!(CN|中国|官方|IPV6|优选|更新)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 亚洲自动`url-test`(?=.*(东|东亚|南|东南|西|西亚|中|南亚|菲|PH|泰|TH|马|MY|印|IN|越|VN|孟|BD|斯|LK|尼|NP|柬|KH|缅|MM|巴|PK|阿|AE|哈|KZ))^((?!(日|日本|港|香港|中|中国|台|台湾|新加坡|新|加坡|韩|韩国)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(CN|中国|官方|IPV6|优选|更新)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(?=.*)^((?!(CN|中国|官方|IPV6|优选|更新)).)*$
 ;启用自定义规则集
